[package]
name = "nine_ball_game"
version = "0.1.0"
edition = "2021"

# The shared protocol
#[lib]
#path = "src/client/lib.rs"
#crate-type = ["cdylib", "rlib"]

[[bin]]
name = "server"
path = "src/server/main.rs"



[dependencies]
bevy = { version = "0.14.2", features = ["webgl2"] }
bevy_rapier3d = { version = "0.27.0", features = ["enhanced-determinism", "wasm-bindgen"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.145"
bincode = "1.3.3"
# Crucial dependency for browser client
ewebsock = { version = "0.6.0", features = ["tls"] } 
meshtext = "0.3.1"
renet = "0.0.15"

# Server-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.0", features = ["derive"] }
futures-util = "0.3"

# Client-specific dependencies (WASM)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
uuid = { version = "1.18.1", features = ["js"] }
web-sys = { version = "0.3", features = ["console"] }